--- a/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
+++ b/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
@@ -2,17 +2,26 @@
 <div class="grid">
   <div class="col-12">
     <div class="card">
-      <p-table [value]="appeals" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
-        [rowsPerPageOptions]="[5, 10, 20]" [showCurrentPageReport]="true">
+      <p-table
+        [value]="appeals"
+        [paginator]="true"
+        [rows]="10"
+        [tableStyle]="{ 'min-width': '50rem' }"
+        [rowsPerPageOptions]="[10, 20]"
+        [showCurrentPageReport]="true"
+        [styleClass]="
+          'p-datatable-sm p-datatable-gridlines p-datatable-striped'
+        "
+      >
         <ng-template pTemplate="caption">
           <div class="flex align-items-center justify-content-between">
-            Appeals
+            <span></span>
             <p-button icon="pi pi-refresh" />
           </div>
         </ng-template>
         <ng-template pTemplate="header">
           <tr>
-            <th style="min-width: 18rem"></th>
+            <th style="min-width: 18rem">Actions</th>
             <th pSortableColumn="title" style="min-width: 25rem">
               Title<p-sortIcon field="title" />
             </th>
@@ -49,13 +58,30 @@
         <ng-template pTemplate="body" let-appeal>
           <tr>
             <td>
-              <div class="flex justify-content-center flex-wrap gap-3 mb-4">
-                <p-button icon="pi pi-pencil" [rounded]="true" [outlined]="true" severity="success"
-                  (onClick)="editAppeal(appeal.id)" *ngIf="showEditButton(appeal)" />
-                <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
-                  (onClick)="deleteAppeal(appeal)" *ngIf="showDeleteButton(appeal)" />
-                <p-button icon="pi pi-eye" class="mr-1" [rounded]="true" [outlined]="true"
-                  (onClick)="viewAppeal(appeal)" />
+              <div class="flex justify-content-center flex-wrap gap-3">
+                <p-button
+                  icon="pi pi-pencil"
+                  [rounded]="true"
+                  [outlined]="true"
+                  severity="success"
+                  (onClick)="editAppeal(appeal.id)"
+                  *ngIf="showEditButton(appeal)"
+                />
+                <p-button
+                  icon="pi pi-trash"
+                  severity="danger"
+                  [rounded]="true"
+                  [outlined]="true"
+                  (onClick)="deleteAppeal(appeal)"
+                  *ngIf="showDeleteButton(appeal)"
+                />
+                <p-button
+                  icon="pi pi-eye"
+                  class="mr-1"
+                  [rounded]="true"
+                  [outlined]="true"
+                  (onClick)="viewAppeal(appeal)"
+                />
               </div>
             </td>
             <td>{{ appeal.title }}</td>
@@ -75,9 +101,13 @@
         </ng-template>
       </p-table>
 
-
-      <p-dialog [(visible)]="viewDialog" [style]="{ width: '1200px' }" header="Appeals Details" [modal]="true"
-        styleClass="p-fluid">
+      <p-dialog
+        [(visible)]="viewDialog"
+        [style]="{ width: '1200px' }"
+        header="Appeals Details"
+        [modal]="true"
+        styleClass="p-fluid"
+      >
         <div class="card">
           <div class="col-12 md:col-12 lg:col-12">
             <h2 style="text-align: center">{{ appeal && appeal.title }}</h2>
@@ -87,16 +117,20 @@
           </div>
           <br /><br />
           <h3 style="text-align: center">Fund Details</h3>
-          <div style="
+          <div
+            style="
               display: flex;
               justify-content: center;
               gap: 100px;
               margin-top: 20px;
               color: blue;
               font-size: 17px;
-            ">
-            <span>Total Funds Required:
-              {{ appeal && appeal.totalFundsRequired }}</span>
+            "
+          >
+            <span
+              >Total Funds Required:
+              {{ appeal && appeal.totalFundsRequired }}</span
+            >
             <span>Funds Received: {{ appeal && appeal.fundsReceived }}</span>
             <span>Funds Remaining: {{ appeal && appeal.fundsNeeded }}</span>
           </div>
@@ -128,7 +162,12 @@
             <p>Mobile: {{ appeal && appeal.verifierMobile }}</p>
             <p>Verified Date: {{ appeal && appeal.verifiedDate }}</p>
           </div>
-          <p-button label="Close" [text]="true" severity="close" (onClick)="hideDialog()" />
+          <p-button
+            label="Close"
+            [text]="true"
+            severity="close"
+            (onClick)="hideDialog()"
+          />
         </div>
       </p-dialog>
     </div>
