--- a/h-charity-ui/src/app/modules/appeals/pages/add-update-appeal/add-update-appeal.component.html
+++ b/h-charity-ui/src/app/modules/appeals/pages/add-update-appeal/add-update-appeal.component.html
@@ -80,6 +80,7 @@
                   formControlName="isVerified"
                   [options]="isVerifiedOptions"
                   optionLabel="name"
+                  optionValue="name"
                   placeholder="Is Verified"
                   dataKey="value"
                 ></p-dropdown>
