--- a/h-charity-ui/src/app/modules/appeals/pages/add-update-appeal/add-update-appeal.component.html
+++ b/h-charity-ui/src/app/modules/appeals/pages/add-update-appeal/add-update-appeal.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <div class="col-12">
     <div class="card">
-      <h5>
+      <h5 class="add-appeal-heading">
         <strong> {{ mode }} Appeal</strong>
       </h5>
       <form [formGroup]="appealForm" (ngSubmit)="saveAppeal()">
